--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
   <body>
     <div class="calculadora">
       <div class="display">
-        <input id="resultado" readonly type="number" />
+        <input id="resultado" value="text" readonly type="number" />
       </div>
       <div class="botones">
-        <button onclick="presion">0</button>
-        <button onclick="presion">C</button>
-        <button onclick="presion">=</button>
-        <button onclick="presion">*</button>
-        <button onclick="presion">7</button>
-        <button onclick="presion">8</button>
-        <button onclick="presion">9</button>
-        <button onclick="presion">/</button>
-        <button onclick="presion">4</button>
-        <button onclick="presion">5</button>
-        <button onclick="presion">6</button>
-        <button onclick="presion">-</button>
-        <button onclick="presion">1</button>
-        <button onclick="presion">2</button>
-        <button onclick="presion">3</button>
-        <button onclick="presion">+</button>
+        <button onclick="presion('0')">0</button>
+        <button onclick="presion('C')">C</button>
+        <button onclick="presion('=')">=</button>
+        <button onclick="presion('*')">*</button>
+        <button onclick="presion('7')">7</button>
+        <button onclick="presion('8')">8</button>
+        <button onclick="presion('9')">9</button>
+        <button onclick="presion('/')">/</button>
+        <button onclick="presion('4')">4</button>
+        <button onclick="presion('5')">5</button>
+        <button onclick="presion('6')">6</button>
+        <button onclick="presion('-')">-</button>
+        <button onclick="presion('1')">1</button>
+        <button onclick="presion('2')">2</button>
+        <button onclick="presion('3')">3</button>
+        <button onclick="presion('+')">+</button>
       </div>
     </div>
   </body>
