--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="calculadora">
       <div class="display">
-        <input id="resultado" value="text" readonly type="number" />
+        <input id="resultado" readonly />
       </div>
       <div class="botones">
         <button onclick="presion('0')">0</button>
